fix: fix certification section to sho on mobile. Remove <div> around sections

--- a/src/components/Experience.scss
+++ b/src/components/Experience.scss
@@ -6,4 +6,5 @@ ul.experience-details {
 
 .experience-details li {
   padding: 0em 1rem;
+  border: none;
 }
